[tool.poetry]
name = "dsdc"
version = "0.6.2"
description = "dockerhub-sensitive-data-collector"
authors = ["adioss <adrien.pailhes@outlook.com>"]
license = "GPLv3"

[tool.poetry.scripts]
main = "dsdc:main"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
unconcealment = "^0.6.2"
retrying = "^1.3.3"
envyaml = "^1.9.210927"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
safety = "^1.10.3"
bandit = "^1.7.1"
mypy = "^0.910"
coverage = "^6.1.2"

[tool.semantic_release]
version_variable = ["src/__init__.py:__version__", "pyproject.toml:version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip install --upgrade pip && pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
